# ds-e2e-test

./: pyproject.toml  pytest.ini
20220901-0bd5e8/000000120220901G4-0013/: 000000120220901054406G4-0013_run0001_localization.csv  000000120220901054406G4-0013_run0001_ut.csv  000000120220901054504G4-0013_run0002_localization.csv  000000120220901054504G4-0013_run0002_ut.csv
20220901-0bd5e8/000000120220901G4-0013/config/: 000000120220901054406G4-0013_run0001_run_config.json  000000120220901054504G4-0013_run0002_run_config.json  000000120220901054504G4-0013_run0002_ut_sensor_array.json
ds_e2e_test/: main.py
tests/: 20220901-0bd5e8_analyzed_expected.csv  expected_data.py  test_end_to_end.py
